--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "React App",
-  "homepage" : "http://btace13.github.io",
+  "homepage" : "https://btace13.github.io/BaconTextGenerator/",
   "name": "Create React App Sample",
   "icons": [
     {
